@@ -1,7 +1,7 @@
 package org.data;
 
 import java.util.ArrayList;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class DataBase {
     private final ArrayList<User> usersList;
@@ -11,11 +11,11 @@ public class DataBase {
     public DataBase(){
 
         usersList= new ArrayList<>();
-        usersList.add(new User("user1","user1@gmail.com","u123","0599123456"));
-        usersList.add(new User("user2","user2@gmail.com","u123","0599123456"));
-        usersList.add(new User("user3","user3@gmail.com","u123","0599123456"));
-        usersList.add(new User("admin","admin@gmail.com","a123","0123456789"));
-        usersList.add(new User("installer","installer@gmail.com","i123","0123456789"));
+        usersList.add(new User("user1","user1@gmail.com","u123","0599123450"));
+        usersList.add(new User("user2","user2@gmail.com","u123","0599123451"));
+        usersList.add(new User("user3","user3@gmail.com","u123","0599123452"));
+        usersList.add(new User("admin","admin@gmail.com","a123","0123456783"));
+        usersList.add(new User("installer","installer@gmail.com","i123","0123456784"));
 
 
         Product.resetLastId();
@@ -24,20 +24,20 @@ public class DataBase {
         categoryList.add(new Category("Interior"));
         categoryList.add(new Category("Exterior"));
         categoryList.add(new Category("Electronics"));
-        categoryList.get(0).addProduct(new Product("item1",categoryList.get(0).getName(),"Don't buy please.",1.3,true));
-        categoryList.get(0).addProduct(new Product("item2",categoryList.get(0).getName(),"Don't buy please.",5.3,true));
-        categoryList.get(0).addProduct(new Product("item3",categoryList.get(0).getName(),"Don't buy please.",2.3,true));
-        categoryList.get(0).addProduct(new Product("item4",categoryList.get(0).getName(),"Don't buy please.",1.3,true));
+        categoryList.get(0).addProduct(new Product("item1",categoryList.get(0).getName(),"item1 is good.",1.3,true));
+        categoryList.get(0).addProduct(new Product("item2",categoryList.get(0).getName(),"item2 is good.",5.3,true));
+        categoryList.get(0).addProduct(new Product("item3",categoryList.get(0).getName(),"item3 is good.",2.3,true));
+        categoryList.get(0).addProduct(new Product("item4",categoryList.get(0).getName(),"item4 is good.",1.3,true));
 
-        categoryList.get(1).addProduct(new Product("item1",categoryList.get(1).getName(),"Don't buy please.",1.3,true));
-        categoryList.get(1).addProduct(new Product("item2",categoryList.get(1).getName(),"Don't buy please.",1.3,true));
-        categoryList.get(1).addProduct(new Product("item3",categoryList.get(1).getName(),"Don't buy please.",2.4,true));
-        categoryList.get(1).addProduct(new Product("item4",categoryList.get(1).getName(),"Don't buy please.",6.6,true));
+        categoryList.get(1).addProduct(new Product("item5",categoryList.get(1).getName(),"item5 is good.",1.3,true));
+        categoryList.get(1).addProduct(new Product("item6",categoryList.get(1).getName(),"item6 is good.",1.3,true));
+        categoryList.get(1).addProduct(new Product("item7",categoryList.get(1).getName(),"item7 is good.",2.4,true));
+        categoryList.get(1).addProduct(new Product("item8",categoryList.get(1).getName(),"item8 is good.",6.6,true));
 
-        categoryList.get(2).addProduct(new Product("item1",categoryList.get(2).getName(),"Don't buy please.",7.3,true));
-        categoryList.get(2).addProduct(new Product("item2",categoryList.get(2).getName(),"Don't buy please.",0.3,true));
-        categoryList.get(2).addProduct(new Product("item3",categoryList.get(2).getName(),"Don't buy please.",2.4,true));
-        categoryList.get(2).addProduct(new Product("item4",categoryList.get(2).getName(),"Don't buy please.",6.6,true));
+        categoryList.get(2).addProduct(new Product("item9",categoryList.get(2).getName(),"item9 is good.",7.3,true));
+        categoryList.get(2).addProduct(new Product("item10",categoryList.get(2).getName(),"item10 is good.",0.3,true));
+        categoryList.get(2).addProduct(new Product("item11",categoryList.get(2).getName(),"item11 is good.",2.4,true));
+        categoryList.get(2).addProduct(new Product("item12",categoryList.get(2).getName(),"item12 is good.",6.6,true));
 
         Appointment.resetLastId();
         requestedAppointmentsList = new ArrayList<>();
@@ -62,7 +62,7 @@ public class DataBase {
                 .findFirst()
                 .orElse(null);
     }
-    public ArrayList<User> getCustomerList(){
+    public List<User> getCustomerList(){
         ArrayList<User> customers=new ArrayList<>();
         usersList.forEach(user->{
            if(!user.getEmail().equals("admin@gmail.com") && !user.getEmail().equals("installer@gmail.com")){
@@ -83,7 +83,7 @@ public class DataBase {
                 .findFirst()
                 .orElse(null);
     }
-    public ArrayList<Category> getCategoryList(){
+    public List<Category> getCategoryList(){
         return categoryList;
     }
     public Product searchOneProduct(int id){
@@ -93,27 +93,27 @@ public class DataBase {
                 .findFirst()
                 .orElse(null);
     }
-    public ArrayList<Product> searchProducts(String name){
-        return (ArrayList<Product>) categoryList.stream()
+    public List<Product> searchProducts(String name){
+        return categoryList.stream()
             .flatMap(category -> category.getProductsList().stream())
             .filter(product -> product.getName().equals(name))
-            .collect(Collectors.toList());
+            .toList();
     }
     public void deleteProduct(Product productDelete){
         categoryList.stream()
                 .filter(category -> category.getName().equals(productDelete.getCategory()))
                 .findFirst().ifPresent(categoryObj -> categoryObj.deleteProduct(productDelete));
     }
-    public ArrayList<Product> getAllProducts(){
-        ArrayList<Product> allProducts=new ArrayList<Product>();
+    public List<Product> getAllProducts(){
+        ArrayList<Product> allProducts=new ArrayList<>();
         categoryList.forEach(category -> allProducts.addAll(category.getProductsList()));
         return allProducts;
     }
-    public ArrayList<Appointment> searchAppointmentsByDate(String date){
-        return (ArrayList<Appointment>) requestedAppointmentsList.stream().filter(appointment -> appointment.getDate().equals(date))
-                .collect(Collectors.toList());
+    public List<Appointment> searchAppointmentsByDate(String date){
+        return requestedAppointmentsList.stream().filter(appointment -> appointment.getDate().equals(date))
+                .toList();
     }
-    public ArrayList<Appointment> getRequestedAppointmentsList(){
+    public List<Appointment> getRequestedAppointmentsList(){
         return requestedAppointmentsList;
     }
     public void addAppointment(Appointment appointment){
@@ -123,7 +123,7 @@ public class DataBase {
     public void addApprovedAppointment(Appointment appointment) {
         approvedAppointmentArrayList.add(appointment);
     }
-    public ArrayList<Appointment> getApprovedAppointmentArrayList(){
+    public List<Appointment> getApprovedAppointmentArrayList(){
         return approvedAppointmentArrayList;
     }
     public Appointment searchAppointment(int id){
